--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container">
 
         <header>
-            <img src="https://i.postimg.cc/rp0DN2Tk/lantern.png" alt="Elegant Lantern Icon">
+            <img src="images/lantern.png" alt="Elegant Lantern Icon">
             <h1>Welcome to The Bajaj's Bar</h1>
             <p class="tagline">Happy Dhanteras!</p>
             <p class="warning">
@@ -161,13 +161,13 @@
 
             <div class="menu-item">
                 <h3>The Spirit</h3>
-                <img src="https://i.postimg.cc/0j0V6s8g/greater-than-gin.png" alt="Bottle of Greater Than Gin">
+                <img src="images/gin.png" alt="Bottle of Greater Than Gin">
                 <p>Gin: Greater Than</p>
             </div>
 
             <div class="menu-item">
                 <h3>The Brew</h3>
-                <img src="https://i.postimg.cc/d141p1G1/budweiser-beer.png" alt="Bottle of Budweiser Beer">
+                <img src="images/beer.png" alt="Bottle of Budweiser Beer">
                 <p>Beer: Budweiser</p>
             </div>
 
@@ -187,7 +187,7 @@
             
             <div class="menu-item">
                 <h3>The Teetotaler's Treasure</h3>
-                <img src="https://i.postimg.cc/k47txywQ/green-apple-mocktail.jpg" alt="A glass of green apple punch mocktail">
+                <img src="images/mocktail.jpg" alt="A glass of green apple punch mocktail">
                 <p>Mocktail: Starlit Apple Spritz</p>
             </div>
         </div>
